# tatva

./: .changelog.tpl  .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: mirror-to-gitlab.yml
docs/: .gitignore  README.md  _quarto.yml  doc.py  index.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
docs/_extensions/fumadocs/: _extension.yml  fumadocs_citeproc.lua  fumadocs_utils.lua
docs/_scripts/: serve.py  watch_mdx_json.py
docs/_website/: .gitignore  README.md  fumapy.config.ts  package.json  source.config.ts
docs/_website/app/: global.css  not-found.tsx
docs/_website/app/(apidocs)/[...slug]/: layout.tsx
docs/_website/app/(home)/: page.tsx
docs/_website/app/static.json/: route.ts
docs/_website/components/: search.tsx
docs/_website/lib/: layout.shared.tsx  tatva.json
docs/app/: layout.tsx  provider.tsx  theme.css
docs/app/(apidocs)/[...slug]/: page.tsx
docs/app/(home)/: headline.tsx  layout.tsx
docs/app/(home)/blog/[slug]/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/: _quarto.yml  index.md
docs/content/_extensions/fumadocs/: _extension.yml  fumadocs.lua  fumadocs_code_blocks.lua  fumadocs_renderer.lua
docs/content/_scripts/: copyMdx.js  copyMdx.sh  dirs.js  watchMdx.js
docs/content/docs/: index.mdx  meta.json
docs/docs/: index.mdx  meta.json
docs/lib/: autodocSource.tsx  source.tsx  tatva.json
femsolver/: __init__.py  _element.py  bar.py  compound.py  element.py  fem_tools.py  jax_utils.py  mesh.py  operator.py  operator_refactored.py  quadrature.py  run_bar.sh  run_bar_gpu.sh  solver_utils.py  sparse.py  test_integration.py  utils.py
femsolver/plotting/: __init__.py  _pyvista.py  latex_sans_serif.mplstyle
tatva/: compound.py  lifter.py  operator.py  sparse.py
tatva/element/: __init__.py  base.py
tatva/plotting/: __init__.py
tests/: test_lifter.py  test_operator.py
