[project]
name = "tatva"
version = "0.3.1"
description = "Lego-like building blocks for finite element analysis"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "LGPL-3.0"
license-files = [
    "COPYING",
    "COPYING.LESSER",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.1",
    "equinox",
    "numpy",
    "sparsejac",
    "jax-autovmap>=0.3.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
dev = [
    "commitizen>=4.9.1",
    "pytest>=8.4.2",
]
docs = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "fumadocs-autodoc>=0.0.2",
    "watchdog",
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://gitlab.ethz.ch/smec/software/tatva"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
template = ".changelog.tpl"
