[project]
name = "tatva-docs"
version = "0.0.1"
description = "Official docs for tatva"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "fumadocs-autodoc>=0.0.2",
    "tatva",
]

[tool.uv.sources]
tatva = { git = "ssh://git@github.com/smec-ethz/tatva.git" }
